samples/_failures_safe/1761342292_eb7176_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_126e95c7.c: In function ‘main’:
./samples/SAFE/__tmp_126e95c7.c:156:35: error: expected ‘)’ at end of input
  156 |     multiply_matrices(&mat1, &mat2
      |                      ~            ^
      |                                   )
./samples/SAFE/__tmp_126e95c7.c:156:5: error: too few arguments to function ‘multiply_matrices’
  156 |     multiply_matrices(&mat1, &mat2
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_126e95c7.c:98:6: note: declared here
   98 | void multiply_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |      ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_126e95c7.c:156:5: error: expected declaration or statement at end of input
  156 |     multiply_matrices(&mat1, &mat2
      |     ^~~~~~~~~~~~~~~~~
